--- a/src/main/docker/Dockerfile.native-distroless
+++ b/src/main/docker/Dockerfile.native-distroless
@@ -7,11 +7,11 @@
 #
 # Then, build the image with:
 #
-# docker build -f src/main/docker/Dockerfile.native-distroless -t quarkus/car .
+# docker build -f src/main/docker/Dockerfile.native-distroless -t quarkus/hibernate-reactive-routes .
 #
 # Then run the container using:
 #
-# docker run -i --rm -p 8080:8080 quarkus/car
+# docker run -i --rm -p 8080:8080 quarkus/hibernate-reactive-routes
 #
 ###
 FROM quay.io/quarkus/quarkus-distroless-image:1.0
