--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,14 +5,14 @@ display:
     factor: 2.23694
 quarkus:
   datasource:
-    db-kind: postgresql
+    db-kind: mysql
     jdbc:
       max-size: 8
       min-size: 2
-      url: jdbc:mysql://cdb-dkzuspak.cd.tencentcdb.com:10031/car_db?useUnicode=true&characterEncoding=utf8
-    password: bruce
-    username: java.net
+      url: jdbc:mysql://cdb-dkzuspak.cd.tencentcdb.com:10031/car_db2?useUnicode=true&characterEncoding=utf8
+    password: java.net
+    username: bruce
   hibernate-orm:
     database:
       generation: drop-and-create
-    sql-load-script: import.sql
+#    sql-load-script: import.sql
