change to hibernate panache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,8 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.sql-load-script=import.sql
 
 # Reactive config
-quarkus.datasource.reactive.url=vertx-reactive:mysql://cdb-dkzuspak.cd.tencentcdb.com:10031/quarkus?useUnicode=true&characterEncoding=utf8
+#quarkus.datasource.reactive.url=vertx-reactive:mysql://cdb-dkzuspak.cd.tencentcdb.com:10031/quarkus?useUnicode=true&characterEncoding=utf8
+quarkus.datasource.jdbc.url=jdbc:mysql://cdb-dkzuspak.cd.tencentcdb.com:10031/quarkus?useUnicode=true&characterEncoding=utf8
 quarkus.http.port=9090
 %dev.quarkus.http.port=8081
 %test.quarkus.http.port=7777
