--- a/pom.xml
+++ b/pom.xml
@@ -53,16 +53,15 @@
 
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-hibernate-reactive</artifactId>
+      <artifactId>quarkus-hibernate-orm-panache-kotlin</artifactId>
     </dependency>
-    <!-- Hibernate Reactive uses the reactive-pg-client with PostgreSQL under the hood -->
-    <!--        <dependency>-->
-    <!--            <groupId>io.quarkus</groupId>-->
-    <!--            <artifactId>quarkus-reactive-pg-client</artifactId>-->
-    <!--        </dependency>-->
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-reactive-mysql-client</artifactId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-jdbc-mysql</artifactId>
     </dependency>
 
     <!-- Vert.x Routes -->
