change to hibernate panache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ quarkus.http.port=9090
 %dev.quarkus.http.port=8081
 %test.quarkus.http.port=7777
 %server1.quarkus.http.port=6666
+
+#snowflake
+snowflake.dc-id=1
+snowflake.machine-id=1
