--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
       <artifactId>quarkus-arc</artifactId>
     </dependency>
 
+    <!-- health and monitor -->
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
