--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=bruce
 quarkus.datasource.password=java.net
 
-quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.database.generation=drop-and-create
+#quarkus.hibernate-orm.sql-load-script=import.sql
 quarkus.hibernate-orm.log.sql=true
-quarkus.hibernate-orm.sql-load-script=import.sql
 
 # Reactive config
 #quarkus.datasource.reactive.url=vertx-reactive:mysql://cdb-dkzuspak.cd.tencentcdb.com:10031/quarkus?useUnicode=true&characterEncoding=utf8
@@ -18,3 +18,5 @@ quarkus.http.port=9090
 snowflake.dc-id=1
 snowflake.machine-id=1
 quarkus.smallrye-health.root-path=/actuator/health
+
+#quarkus.vertx.prefer-native-transport=true
