--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+quarkus.arc.remove-final-for-proxyable-methods=true
 quarkus.datasource.db-kind=mysql
 quarkus.datasource.username=bruce
 quarkus.datasource.password=java.net
